fix: ajuste na sidebar mobile

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -14,7 +14,7 @@
         "ADD": "Add",
         "SEARCH": "Search",
         "ACTIONS": "Actions",
-        "CREATE_NEW": "Create New",
+        "CREATE_NEW": "Add",
         "FILTER": "Filter",
         "NAME": "Name",
         "DESCRIPTION": "Description",
