--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -14,7 +14,7 @@
         "ADD": "Añadir",
         "SEARCH": "Buscar",
         "ACTIONS": "Acciones",
-        "CREATE_NEW": "Crear Nuevo",
+        "CREATE_NEW": "Add",
         "FILTER": "Filtrar",
         "NAME": "Nombre",
         "DESCRIPTION": "Descripción",
