--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -14,7 +14,7 @@
         "ADD": "Adicionar",
         "SEARCH": "Buscar",
         "ACTIONS": "Ações",
-        "CREATE_NEW": "Criar Novo",
+        "CREATE_NEW": "Adicionar",
         "FILTER": "Filtrar",
         "NAME": "Nome",
         "DESCRIPTION": "Descrição",
